--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.8",
+    "@mui/lab": "^7.0.1-beta.22",
     "@mui/material": "^7.3.8",
     "@mui/material-nextjs": "^7.3.8",
     "@tanstack/react-table": "^8.21.3",
     "d3": "^7.9.0",
     "d3-fetch": "^3.0.1",
+    "d3-geo": "^3.1.1",
+    "d3-scale": "^4.0.2",
     "lodash": "^4.17.23",
     "match-sorter": "^8.2.0",
     "next": "15.5.12",
